# qamster

./: .gitignore  CMakeLists.txt  README.md  activityitemdelegate.cpp  editdialog.cpp  editdialog.h  helperfunctions.h  history.cpp  history.h  main.cpp  qamster.cpp  qamster.h  qamster.kdev4  timedatabase.cpp  timedatabase.h  timetablemodel.cpp  timetablemodel.h  timetableview.cpp  timetableview.h
cpp/: CMakeLists.txt
cpp/src/: activity-histogram.cpp  activitycompletermodel.h  activityitemdelegate.h  category-histogram.cpp  editdialog.h  helperfunctions.cpp  helperfunctions.h  main.cpp  timedatabase.h  timetablemodel.cpp  timetablemodel.h
cpp/ui/: editdialog.ui  settings.ui
go-appengine/: README.md  app.yaml  channel.go  cron.yaml  datastore.go  main.go  package.json  types.go  webpack.config.js
go-appengine/android/app/: build.gradle  proguard-rules.pro
go-appengine/android/app/src/androidTest/java/org/example/narfinger/qamster/: ExampleInstrumentedTest.kt
go-appengine/android/app/src/main/: AndroidManifest.xml
go-appengine/android/app/src/main/java/org/example/narfinger/qamster/: MainActivity.kt
go-appengine/android/app/src/main/res/layout/: activity_main.xml  content_main.xml
go-appengine/android/app/src/main/res/menu/: menu_main.xml
go-appengine/android/app/src/main/res/values/: strings.xml
go-appengine/android/app/src/test/java/org/example/narfinger/qamster/: ExampleUnitTest.kt
go-appengine/css/: qamster.css
go-appengine/js/: qamster.js
go-appengine/static/: index.js  index.jsx
go-appengine/templates/: editdialog.html  historyview.html  index.html  mainview.html
polymer/src/: my-app.html  my-view1.html
rust/: Dockerfile  frontend_url.txt  password.txt
rust/backend/: .env  Cargo.toml  Dockerfile  app.yaml
rust/backend/migrations/20170707051616_initial/: down.sql  up.sql
rust/backend/src/: Rocket.toml  main.rs
rust/frontend/: Cargo.toml
rust/frontend/src/: main.rs
src/: activity-histogram.cpp  activity-histogram.h  activitycompletermodel.cpp  activitycompletermodel.h  activityitemdelegate.cpp  activityitemdelegate.h  category-histogram.cpp  category-histogram.h  editdialog.cpp  editdialog.h  helperfunctions.cpp  helperfunctions.h  histogram.cpp  histogram.h  history.cpp  history.h  qamster.cpp  qamster.h  settings.cpp  settings.h  timedatabase.cpp  timedatabase.h  timetablemodel.cpp  timetablemodel.h  timetableview.cpp  timetableview.h
ui/: history.ui  qamster.ui  settings.ui
