[package]
name = "qamster-backend"
version = "0.1.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.4"
clippy = {version = "0.0", optional = true}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = {version = "0.2", features = ["json"]}
dotenv = "0.10"
diesel = {version = "0.13", features = ["sqlite"]}
diesel_codegen = {version = "0.13", features = ["sqlite"]}
r2d2 = "0.7"
r2d2-diesel = {version = "0.13"}
reqwest = "0.6"
