[package]
name = "qamster-backend"
version = "0.1.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[dependencies]
chrono = {version = "0.3", features = ["serde"]} #diesel currently needs this version of chrono
clippy = {version = "0.0", optional = true}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rocket = {git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket" }
#rocket = "0.3"
#rocket_codegen = "0.3"
#rocket_contrib = {version = "0.3", features = ["json"]}

dotenv = "0.10"
diesel = {version = "0.13", features = ["sqlite", "chrono"]}
diesel_codegen = {version = "0.13", features = ["sqlite"]}
r2d2 = "0.7"
r2d2-diesel = {version = "0.13"}
reqwest = "0.6"
