[package]
name = "qamster"
version = "0.1.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[dependencies]
ansi_term = "0.9.0"         # Library for ANSI terminal colours and styles (bold, underline)
clap = "2.25"               # A simple to use, efficient, and full featured  Command Line Argument Parser
reqwest = "0.6"            # higher level HTTP client library

