
[package]
name = "qamster"
version = "0.1.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[dependencies]
ansi_term = "0.9"         # Library for ANSI terminal colours and styles (bold, underline)
clippy = {version = "0.0", optional = true}
chrono = {version = "0.4", features = ["serde"]} # Date and time library for Rust
clap = "2.25"               # A simple to use, efficient, and full featured  Command Line Argument Parser
error-chain = "0.11.0-rc.2"      # Yet another error boilerplate library.
futures = "0.1"                     # An implementation of futures and streams featuring zero allocations, composability, and iterator-like interfaces. 
futures-cpupool = "0.1"
hyper = "0.10"                            # A modern HTTP library.
reqwest = "0.6"            # higher level HTTP client library
serde = "1.0"                       # A generic serialization/deserialization framework
serde_derive = "1.0"                # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde_json = "1.0"          # A JSON serialization file format

